--- a/lo54ecole/pom.xml
+++ b/lo54ecole/pom.xml
@@ -38,6 +38,12 @@
 </dependency>
 
     <dependency>
+      <groupId>antlr</groupId>
+      <artifactId>antlr</artifactId>
+      <version>2.7.7</version>
+    </dependency>
+
+    <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.12.1.GA</version>
