--- a/lo54ecole/pom.xml
+++ b/lo54ecole/pom.xml
@@ -32,10 +32,10 @@
     </dependency>
   
     <dependency>
-   <groupId>org.hibernate</groupId>
-   <artifactId>hibernate-core</artifactId>
-   <version>3.6.1.Final</version>
-</dependency>
+       <groupId>org.hibernate</groupId>
+       <artifactId>hibernate-core</artifactId>
+       <version>3.6.1.Final</version>
+    </dependency>
 
     <dependency>
       <groupId>antlr</groupId>
@@ -48,6 +48,16 @@
       <artifactId>javassist</artifactId>
       <version>3.12.1.GA</version>
     </dependency>
+
+        <!--
+            https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+        -->
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>4.0.1</version>
+          <scope>provided</scope>
+      </dependency>
 
   </dependencies>
 
@@ -109,6 +119,18 @@
                 </archive>
             </configuration>
         </plugin>
+
+          <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>2.2</version>
+              <configuration>
+                  <ignorePackaging>true</ignorePackaging>
+                  <server>tomcat7</server>
+                  <path>/</path>
+              </configuration>
+          </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
