--- a/lo54webapp/pom.xml
+++ b/lo54webapp/pom.xml
@@ -62,7 +62,10 @@
       <artifactId>lo54ecole</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>system</scope>
+      <systemPath>${basedir}/../lo54ecole/target/lo54ecole-1.0-SNAPSHOT.jar</systemPath>
+      <!--
       <systemPath>${basedir}/lib/lo54ecole-1.0-SNAPSHOT.jar</systemPath>
+      -->
     </dependency>
   </dependencies>
 
