--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
     volumes:
       - /srv/docker/postgresql:/var/lib/postgresql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql #sql script to create tables at entrypoint
+  graphite:
+    restart: always
+    image: "graphiteapp/graphite-statsd"
+    ports:
+      - "80:80"
+      - "2003:2003"
+      - "2004:2004"
