add timer and meter for catalog and healthcheck for database

--- a/lo54ecole/pom.xml
+++ b/lo54ecole/pom.xml
@@ -49,6 +49,23 @@
       <version>3.12.1.GA</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>3.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.codahale.metrics</groupId>
+      <artifactId>metrics-jvm</artifactId>
+      <version>3.0.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-healthchecks -->
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-healthchecks</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
 
   </dependencies>
 
